--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title:            Site Title
-description:      Describe your website here.
+title:            Hello
+description:      Simple Website
 disqus_shortname: 
 reading_time:     true
 words_per_minute: 200
@@ -9,10 +9,10 @@ url:
 
 # Owner/author information
 owner:
-  name:           Your Name
+  name:           Mzy
   avatar:         avatar.jpg
-  bio:            "Your bio goes here. It shouldn't be super long but a good sentence or two should suffice."
-  email:          you@email.com
+  bio:            没有
+  email:          100552796@11.com
   # Social networking links used in footer. Update and remove as you like.
   twitter:        
   facebook:       
